--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.DS_Store
+empirical.mmap
+examples/.DS_Store
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
